# webdownloader-python-zeromq-react

./: Makefile  pyproject.toml
backend/: application.py  pushclient.py  worker.py
backend/templates/: form.html  index.html
